--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^7.1.2",
     "moment": "^2.29.1",
     "react": "^16.13.1",
+    "node": "^15.0.1",
+    "npm": "^6.14.8",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-date-picker": "^5.1.0",
     "react-dom": "^16.13.1",
