--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "draft-js": "^0.11.7",
+    "draft-js-buttons": "^2.0.2",
+    "draft-js-plugins-editor": "^3.0.0",
     "moment": "^2.29.1",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-date-picker": "^5.1.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.14.0",
     "react-responsive": "^8.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
