--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "@testing-library/user-event": "^7.1.2",
     "draft-js": "^0.11.7",
     "draft-js-buttons": "^2.0.2",
+    "draft-js-export-html": "^1.4.1",
     "draft-js-plugins-editor": "^3.0.0",
+    "draft-js-static-toolbar-plugin": "^3.0.1",
     "moment": "^2.29.1",
     "react": "^16.14.0",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-date-picker": "^5.1.0",
     "react-dom": "^16.14.0",
+    "react-draft-wysiwyg": "^1.14.5",
+    "react-html-parser": "^2.0.2",
     "react-responsive": "^8.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
