--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@tinymce/tinymce-react": "^3.8.4",
+    "dotenv": "^8.2.0",
+    "draft-convert": "^2.1.10",
     "draft-js": "^0.11.7",
     "draft-js-buttons": "^2.0.2",
     "draft-js-export-html": "^1.4.1",
@@ -21,7 +24,7 @@
     "react-html-parser": "^2.0.2",
     "react-responsive": "^8.1.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.1",
     "react-select": "^3.1.0"
   },
   "scripts": {
