--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^16.14.0",
     "react-draft-wysiwyg": "^1.14.5",
     "react-html-parser": "^2.0.2",
+    "react-multi-carousel": "^2.6.1",
     "react-phone-input-2": "^2.13.9",
     "react-responsive": "^8.1.0",
     "react-router-dom": "^5.2.0",
